# ORBIT

./: .gitignore  API_DESIGN.md  ARCHITECTURE.md  README.md  RUN_MCP_SERVER.md  pyproject.toml  requirements-websocket.txt  start_servers.bat  start_servers.ps1  websocket_server.py
client/: agent.py  auth.py  config.py  main.py  system_prompt.py
config/: tool_registry.json
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/chat/_components/: Chat.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ConnectionStatusBanner.tsx  EmptyChatState.tsx  FeatureGrid.tsx  Footer.tsx  HeroSection.tsx  README.md  SuggestionGrid.tsx  TypingIndicator.tsx  ValueProposition.tsx  empty-chat-state.styles.ts  empty-chat-state.types.ts  index.ts  use-empty-chat-state.ts
frontend/app/conversations/: page.tsx
frontend/app/conversations/_components/: conversation-history.tsx
frontend/app/home/_components/: home-page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/landing/: page.tsx
frontend/app/plugins/: page.tsx
frontend/components/: Sidebar.tsx  animated-background.tsx  login-page.tsx  mouse-interaction.tsx  orbit-logo.tsx
server/gmail/: auth.py  config.py  main.py  test.ipynb  tools.py
server/google_tasks/: auth.py  config.py  main.py  tools.py
server/notion/: README_HTTP.md  package-lock.json  package.json  start-server.js  test-http.js
server/notion/src/: index.ts
server/whatsapp/: config.py  main.py  whatsapp.py
(+5 files in other folders)
